// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`xid.sql > line 4 1`] = `
[
  "select '010'::xid,
       '42'::xid,
       '0xffffffff'::xid,
       '-1'::xid,
	   '010'::xid8,
	   '42'::xid8,
	   '0xffffffffffffffff'::xid8,
	   '-1'::xid8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 7,
                          "sval": {
                            "sval": "010",
                          },
                        },
                      },
                      "location": 12,
                      "typeName": {
                        "location": 14,
                        "names": [
                          {
                            "String": {
                              "sval": "xid",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 26,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "42",
                          },
                        },
                      },
                      "location": 30,
                      "typeName": {
                        "location": 32,
                        "names": [
                          {
                            "String": {
                              "sval": "xid",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 44,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 44,
                          "sval": {
                            "sval": "0xffffffff",
                          },
                        },
                      },
                      "location": 56,
                      "typeName": {
                        "location": 58,
                        "names": [
                          {
                            "String": {
                              "sval": "xid",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 70,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 70,
                          "sval": {
                            "sval": "-1",
                          },
                        },
                      },
                      "location": 74,
                      "typeName": {
                        "location": 76,
                        "names": [
                          {
                            "String": {
                              "sval": "xid",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 85,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 85,
                          "sval": {
                            "sval": "010",
                          },
                        },
                      },
                      "location": 90,
                      "typeName": {
                        "location": 92,
                        "names": [
                          {
                            "String": {
                              "sval": "xid8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 102,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 102,
                          "sval": {
                            "sval": "42",
                          },
                        },
                      },
                      "location": 106,
                      "typeName": {
                        "location": 108,
                        "names": [
                          {
                            "String": {
                              "sval": "xid8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 118,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 118,
                          "sval": {
                            "sval": "0xffffffffffffffff",
                          },
                        },
                      },
                      "location": 138,
                      "typeName": {
                        "location": 140,
                        "names": [
                          {
                            "String": {
                              "sval": "xid8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 150,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 150,
                          "sval": {
                            "sval": "-1",
                          },
                        },
                      },
                      "location": 154,
                      "typeName": {
                        "location": 156,
                        "names": [
                          {
                            "String": {
                              "sval": "xid8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 20 1`] = `
[
  "SELECT pg_input_is_valid('42', 'xid')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "42",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "xid",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 28 1`] = `
[
  "select '1'::xid = '1'::xid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "1",
                              },
                            },
                          },
                          "location": 10,
                          "typeName": {
                            "location": 12,
                            "names": [
                              {
                                "String": {
                                  "sval": "xid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 18,
                              "sval": {
                                "sval": "1",
                              },
                            },
                          },
                          "location": 21,
                          "typeName": {
                            "location": 23,
                            "names": [
                              {
                                "String": {
                                  "sval": "xid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 34 1`] = `
[
  "select '1'::xid = '1'::xid8::xid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "1",
                              },
                            },
                          },
                          "location": 10,
                          "typeName": {
                            "location": 12,
                            "names": [
                              {
                                "String": {
                                  "sval": "xid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 18,
                                  "sval": {
                                    "sval": "1",
                                  },
                                },
                              },
                              "location": 21,
                              "typeName": {
                                "location": 23,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "xid8",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                          "location": 27,
                          "typeName": {
                            "location": 29,
                            "names": [
                              {
                                "String": {
                                  "sval": "xid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 38 1`] = `
[
  "select '1'::xid < '2'::xid",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "1",
                              },
                            },
                          },
                          "location": 10,
                          "typeName": {
                            "location": 12,
                            "names": [
                              {
                                "String": {
                                  "sval": "xid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 18,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": 21,
                          "typeName": {
                            "location": 23,
                            "names": [
                              {
                                "String": {
                                  "sval": "xid",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 50 1`] = `
[
  "select xid8cmp('1', '2'), xid8cmp('2', '2'), xid8cmp('2', '1')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 15,
                            "sval": {
                              "sval": "1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 20,
                            "sval": {
                              "sval": "2",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "xid8cmp",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 26,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 34,
                            "sval": {
                              "sval": "2",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 39,
                            "sval": {
                              "sval": "2",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "xid8cmp",
                          },
                        },
                      ],
                      "location": 26,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 45,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 53,
                            "sval": {
                              "sval": "2",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 58,
                            "sval": {
                              "sval": "1",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "xid8cmp",
                          },
                        },
                      ],
                      "location": 45,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 53 1`] = `
[
  "create table xid8_t1 (x xid8)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "xid8_t1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "x",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "xid8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 58 1`] = `
[
  "create index on xid8_t1 using btree(x)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "x",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 16,
              "relname": "xid8_t1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 86 1`] = `
[
  "create temp table snapshot_test (
	nr	integer,
	snap	pg_snapshot
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "snapshot_test",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "nr",
                  "is_local": true,
                  "location": 35,
                  "typeName": {
                    "location": 38,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "snap",
                  "is_local": true,
                  "location": 48,
                  "typeName": {
                    "location": 53,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_snapshot",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 91 1`] = `
[
  "insert into snapshot_test values (1, '12:13:')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "snapshot_test",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 34,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 37,
                            "sval": {
                              "sval": "12:13:",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 97 1`] = `
[
  "select  pg_snapshot_xmin(snap),
	pg_snapshot_xmax(snap),
	pg_snapshot_xip(snap)
from snapshot_test order by nr",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 85,
                  "relname": "snapshot_test",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "nr",
                          },
                        },
                      ],
                      "location": 108,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "snap",
                                },
                              },
                            ],
                            "location": 25,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_snapshot_xmin",
                          },
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 33,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "snap",
                                },
                              },
                            ],
                            "location": 50,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_snapshot_xmax",
                          },
                        },
                      ],
                      "location": 33,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 58,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "snap",
                                },
                              },
                            ],
                            "location": 74,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_snapshot_xip",
                          },
                        },
                      ],
                      "location": 58,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 102 1`] = `
[
  "select id, pg_visible_in_snapshot(id::text::xid8, snap)
from snapshot_test, generate_series(11, 21) id
where nr = 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 61,
                  "relname": "snapshot_test",
                  "relpersistence": "p",
                },
              },
              {
                "RangeFunction": {
                  "alias": {
                    "aliasname": "id",
                  },
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 11,
                                    },
                                    "location": 92,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 21,
                                    },
                                    "location": 96,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "generate_series",
                                  },
                                },
                              ],
                              "location": 76,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "id",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 11,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "TypeCast": {
                                "arg": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "id",
                                        },
                                      },
                                    ],
                                    "location": 34,
                                  },
                                },
                                "location": 36,
                                "typeName": {
                                  "location": 38,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "text",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                            "location": 42,
                            "typeName": {
                              "location": 44,
                              "names": [
                                {
                                  "String": {
                                    "sval": "xid8",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "snap",
                                },
                              },
                            ],
                            "location": 50,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_visible_in_snapshot",
                          },
                        },
                      ],
                      "location": 11,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "nr",
                        },
                      },
                    ],
                    "location": 109,
                  },
                },
                "location": 112,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 114,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 112 1`] = `
[
  "select pg_current_xact_id() >= pg_snapshot_xmin(pg_current_snapshot())",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "pg_current_xact_id",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 28,
                      "name": [
                        {
                          "String": {
                            "sval": ">=",
                          },
                        },
                      ],
                      "rexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "FuncCall": {
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "pg_current_snapshot",
                                    },
                                  },
                                ],
                                "location": 48,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "pg_snapshot_xmin",
                              },
                            },
                          ],
                          "location": 31,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 129 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 138 1`] = `
[
  "COMMIT",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 142 1`] = `
[
  "ROLLBACK",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xid.sql > line 150 1`] = `
[
  " -- BootstrapTransactionId is always committed
SELECT pg_xact_status('2'::xid8)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 54,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 69,
                                "sval": {
                                  "sval": "2",
                                },
                              },
                            },
                            "location": 72,
                            "typeName": {
                              "location": 74,
                              "names": [
                                {
                                  "String": {
                                    "sval": "xid8",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_xact_status",
                          },
                        },
                      ],
                      "location": 54,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
